# youwee

./: .envrc  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CHANGELOG.vi.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  LICENSE  PLUGINS.md  README.md  biome.json  flake.nix  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.sdk.json  vite.config.ts
.github/workflows/: build-ffmpeg.yml  build.yml  ci.yml  flatpak-test.yml  snap.yml
.kiro/steering/: no-inline-scripts.md
docs/: CHANGELOG.vi.md  CHANGELOG.zh-CN.md  CLI.md  CONTRIBUTING.vi.md  CONTRIBUTING.zh-CN.md  PLUGINS.vi.md  PLUGINS.zh-CN.md  README.vi.md  README.zh-CN.md  browser-extension.md  browser-extension.vi.md  browser-extension.zh-CN.md
extensions/youwee-webext/: manifest.chromium.json  manifest.firefox.json
flatpak/: com.vanloctech.youwee.yml
scripts/: build.sh  patch-fhs-binary.sh  pre-commit
sdk-js/: CHANGELOG.md  README.md  RELEASING.md  package.json  tsconfig.json
sdk-js/src/: ai.ts  cli.ts  compatibility.ts  index.ts  manifest.ts  packager.ts  runtime-cli.ts  runtime.ts  schema.ts  types.ts
snap/: snapcraft.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  assets.rs  channels.rs  cli.rs  cli_shortcut.rs  dependencies.rs  download.rs  download_queue.rs  environment.rs  external.rs  gallery.rs  history.rs  logs.rs  media_split.rs  metadata.rs  mod.rs  plugin.rs  processing.rs  telegram.rs  video.rs  whisper.rs  youtube_search.rs
src-tauri/src/database/: channels.rs  connection.rs  download_queue.rs  history.rs  logs.rs  mod.rs
src-tauri/src/services/: ai.rs  bun.rs  deno.rs  ffmpeg.rs  gallerydl.rs  mod.rs  plugin.rs  polling.rs  telegram.rs  whisper.rs  youtube_search.rs  ytdlp.rs  ytdlp_args.rs
src-tauri/src/services/ai/: dispatch.rs  providers.rs
src-tauri/src/services/plugin/: bridge.rs  compatibility.rs  logging.rs  manifest.rs  package.rs  permissions.rs  providers.rs  registry.rs  scaffold.rs  sdk_bundle.rs  state.rs  summary.rs  tests.rs  workflow.rs  workspace.rs
src-tauri/src/types/: channel.rs  dependencies.rs  download.rs  error.rs  history.rs  log.rs  mod.rs  plugin.rs  video.rs  youtube_search.rs
src-tauri/src/utils/: command.rs  extract.rs  filename.rs  firefox_profiles.rs  format.rs  mod.rs  path.rs  progress.rs  security.rs
src-tauri/tests/: ytdlp_parse_error_tests.rs
src/components/: BrowserCookieErrorDialog.tsx  DenoDialog.tsx  ErrorBoundary.tsx  FFmpegDialog.tsx  FFmpegRequiredDialog.tsx  UpdateDialog.tsx
src/contexts/: AIContext.tsx  ChannelsContext.tsx  DataExportContext.tsx  DependenciesContext.tsx  DownloadContext.tsx  GalleryDlContext.tsx  HistoryContext.tsx  LogContext.tsx  MetadataContext.tsx  PlayerContext.tsx  ProcessingContext.tsx  SubtitleContext.tsx  SummarySessionProvider.tsx  ThemeContext.tsx  UniversalContext.tsx  UpdaterContext.tsx  channels-context.ts  data-export-context.ts  download-context.ts  gallerydl-context.ts  metadata-context.ts  summary-session-context.ts  universal-context.ts
src/hooks/: index.ts  useAppUpdater.ts  useExternalDownloadLinks.ts  usePersistedDownloadQueue.ts  usePluginExecutionToasts.ts  useSchedule.ts  useTelegramRemoteCommands.ts  useTrayDownloadStatus.ts  useTrayEvents.ts
src/i18n/: index.ts
src/lib/: backend-error.ts  download-settings.ts  external-link.ts  network-config.ts  open-file-location.ts  persisted-download-queue.ts  plugin-toast.ts  post-download-plugins.ts  sources.ts  (+10 more)
tests/: channel-downloads.test.ts  download-settings.test.ts  external-link.test.ts  history-item-actions.test.ts  history-summary-dialog.test.ts  network-config.test.ts  plugin-toast.test.ts  simple-markdown.test.tsx  summary-session.test.ts  youwee-sdk.test.ts
(+205 files in other folders)
