[package]
name = "youwee"
version = "0.10.0"
description = "Youwee - Modern YouTube Video Downloader"
authors = ["locnguyen"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
zip = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
